sample with mda.xml doing all between generation from ddl to application start